# Stocker-Pro

./: .env.example  .pre-commit-config.yaml  API_DOCS.md  CI_CD.md  DEPLOYMENT.md  DISASTER_RECOVERY.md  Dockerfile  FOLDERSTRUCTURE.md  LICENSE  MANIFEST.in  PERFORMANCE_OPTIMIZATION.md  PLANNING.md  README.md  SECURITY.md  SECURITY_HARDENING.md  TASK.md  alembic.ini  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: cd.yml  ci.yml  continuous-integration.yml  kubernetes-deploy.yml  terraform-deploy.yml
kubernetes/: api-deployment.yaml  api-ingress.yaml  api-service.yaml  database-deployment.yaml  persistent-volumes.yaml  redis-deployment.yaml  secrets-template.yaml
kubernetes/base/: alertmanager-deployment.yaml  backup-cronjob.yaml  configmap.yaml  database-deployment.yaml  deployment.yaml  grafana-deployment.yaml  horizontal-pod-autoscaler.yaml  ingress.yaml  kustomization.yaml  loki-deployment.yaml  network-policies.yaml  persistent-volumes.yaml  pod-disruption-budget.yaml  prometheus-config.yaml  prometheus-deployment.yaml  promtail-deployment.yaml  redis-deployment.yaml  resource-quotas.yaml  secrets.yaml  service.yaml
kubernetes/overlays/production/: kustomization.yaml
kubernetes/overlays/production/patches/: configmap-patch.yaml  deployment-patch.yaml
kubernetes/overlays/staging/: kustomization.yaml
migrations/: env.py
migrations/versions/: 20250513_000800_initial_schema.py
scripts/: init_database.py
stocker/: __init__.py  app.py
stocker/core/: __init__.py  exceptions.py
stocker/core/config/: __init__.py  settings.py
stocker/core/logging/: __init__.py  formatters.py  handlers.py  logger.py
stocker/core/utils/: __init__.py  cache_decorators.py  datetime.py  decorators.py  validators.py
stocker/domain/: __init__.py  portfolio.py  stock.py  strategy.py  user.py
stocker/infrastructure/cache/: __init__.py  base.py  factory.py  memory_cache.py  redis_cache.py
stocker/infrastructure/database/: __init__.py  init_db.py  session.py
stocker/infrastructure/database/models/: __init__.py  (+4 more)
stocker/interfaces/api/: README.md  __init__.py  app.py  dependencies.py  docs.py  errors.py  main.py  middleware.py  security.py  versioning.py
stocker/services/: __init__.py  base.py  portfolio.py  stock.py  strategy.py  user.py
terraform/: README.md  main.tf  production.tfvars  staging.tfvars  variables.tf
tests/: __init__.py
tests/infrastructure/: __init__.py
tests/infrastructure/database/: __init__.py  conftest.py
tests/interfaces/api/: __init__.py  conftest.py  test_auth.py  test_portfolios.py  test_security.py  test_stocks.py  test_strategies.py  test_users.py
tests/services/: __init__.py  test_portfolio_service.py  test_stock_service.py
(+36 files in other folders)
